--- a/client/scripts/templates/song.html
+++ b/client/scripts/templates/song.html
@@ -1,3 +1,3 @@
 <template name="song">
-	<li>{{name}} by {{artist}} ({{youtubeId}})</li>
+	<li class="{{fixed}} {{nowPlaying}}">{{name}} by {{artist}} ({{youtubeId}})</li>
 </template>
