youtube working with skip

--- a/client/scripts/templates/header.html
+++ b/client/scripts/templates/header.html
@@ -4,6 +4,7 @@
 		<span id="controls">
 			<button id="search" tabindex="2">Search</button>
 	  	<button id="play" tabindex="2">Play</button>
+	  	<button id="pause" tabindex="2">Pause</button>
 	  	<button id="skip" tabindex="2">Skip</button>
 	  </span>
 	</div>
