starting from scratch

--- a/client/scripts/templates/header.html
+++ b/client/scripts/templates/header.html
@@ -1,4 +1,4 @@
-<template name="header">
+<!-- <template name="header">
 	<div id="header">
 		<input type="text" tabindex="1" id="query" placeholder="What do you want to listen to?">
 		<span id="controls">
@@ -8,4 +8,4 @@
 	  	<button id="skip" tabindex="2">Skip</button>
 	  </span>
 	</div>
-</template>
+</template> -->
