--- a/client/scripts/templates/stream.html
+++ b/client/scripts/templates/stream.html
@@ -1,4 +1,4 @@
-<template name="stream">
+<!-- <template name="stream">
 	<div id="stream">
 		<ol>
 			{{#each songs}}
@@ -6,4 +6,4 @@
 			{{/each}}
 		</ol>
 	</div>
-</template>
+</template> -->
