--- a/client/styles/sltj.css
+++ b/client/styles/sltj.css
@@ -14,6 +14,14 @@ input#query{
 	color: blue;
 }
 
+.youtubeContainer-hidden
+{
+  display: none;
+  /*position: absolute;
+  left: -9999px;
+  top: -9999px;*/
+}
+
 .youtubeContainer-active
 {
   position: relative;
