--- a/client/scripts/templates/song.html
+++ b/client/scripts/templates/song.html
@@ -1,3 +1,3 @@
-<template name="song">
+<!-- <template name="song">
 	<li class="{{fixed}} {{nowPlaying}}">{{name}} by {{artist}} ({{youtubeId}})</li>
-</template>
+</template> -->
